--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,19 +15,15 @@
                             {{ site.name }}
                         </a>
                     </p>
-                    <h1>{{ page.title | markdownify | strip }}</h1>
-                {% else %}
-                <div class="avatar"></div>
-                <div class="site_title"><h1>{{ site.name }}</h1></div>
+                    <h1>{{ page.title | markdownify | strip }}{% if page.date %}                         Published {{ page.date | date_to_string }}.
+                     {% endif %}
                 {% endif %}
             </div>
 
             <div class="content">
                 {% if page.url != '/index.html' %}
                 <aside>
-                    Published {{ page.date | date_to_string }}.
-                    <!--<br />
-                    Reading time: {{ page.content | reading_time }}.-->
+                    
                 </aside>
                 {{ content }}
                 {% else %}
