--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
                             {{ site.name }}
                         </a>
                     </p>
-                    <h1>{{ page.title | markdownify | strip }}{% if page.date %}                         Published {{ page.date | date_to_string }}.
-                     {% endif %}
+                    <h1>{{ page.title | markdownify | strip }}</h1>
+                    
+                     
                 {% endif %}
             </div>
 
