--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,6 @@
 
     <title>{{ site.name }} | {{ page.title }}</title>
 
-    <link rel="stylesheet" media="all" href="/css/mine.css" />
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,19 +15,19 @@
     <script src="../old_site/media/js/project-load.js" type="text/javascript"></script>
     <script src="../old_site/media/js/google-an.js" type="text/javascript"></script>
 
-    {% if page.code %}
-    <link rel="stylesheet" href="/ext/highlight.js/styles/sunburst.css">
-    {% endif %}
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-blue.min.css">
+    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 
-    {% if page.code %}
-    <script src="/ext/highlight.js/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    {% endif %}
+       <link rel="stylesheet" media="all" href="/css/mine.css" />
 
+    
+   
     <!-- Any other scripts or anything that the page may want. -->
     {% if page.head %}
     {{ page.head }}
