--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,9 +1,16 @@
 {% if page.publications %}
 ## Publications
 {% for publication in page.publications %}
-<div class="publication">
-    <div><img src="{{ publication[1].image }}" width="180px" /></div>
-    <div markdown="1">{{ publication[1].info }}</div>
+<div class="mdl-grid publication">
+    <div class="mdl-cell mdl-cell--3-col"><img src="{{ publication[1].image }}" width="100%" /></div>
+    <div class="mdl-cell mdl-cell--9-col">
+    <span  markdown="1">{{ publication[1].info }} </span>
+    {% if publication[1].file %}
+   	 <span><a href="{{ publication[1].file }}">[PDF]</a></span>
+    {% endif %}
+    </div> 
+    <br>
+
 </div>
 {% endfor %}
 {% endif %}
