--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-blue.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
+
+
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
