--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,25 +6,25 @@
     <div class="container">
         {% if page.url != '/' %}
         <div class="smaller_container">
-        {% endif %}
+            {% endif %}
             <div class="header">
                 {% if page.url != '/' %}
-                    <p>
-                        <a href="/" rel="author">
-                            <i class="fa fa-th"></i>
-                            {{ site.name }}
-                        </a>
-                    </p>
-                    <h1>{{ page.title | markdownify | strip }}</h1>
+                <p>
+                    <a href="/" rel="author">
+                        <i class="fa fa-th"></i>
+                        {{ site.name }}
+                    </a>
+                </p>
+                <h1>{{ page.title | markdownify | strip }}</h1>
 
-                     
+
                 {% endif %}
             </div>
 
             <div class="content">
                 {% if page.url != '/' %}
                 <aside>
-                    
+
                 </aside>
                 {{ content }}
                 {% else %}
@@ -33,15 +33,23 @@
             </div>
 
             {% if page.comments %}
-                {% include comments.html %}
+            {% include comments.html %}
             {% endif %}
 
             <hr />
             <div class="footer"> Updated {{ site.time | date_to_string }} | <a href="//si.umich.edu">School of Information</a> | <a href="//www.umich.edu">University of Michigan</a></div>
         </div>
         {% if page.url != '/' %}
-        </div>
-        {% endif %}
     </div>
+    {% endif %}
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
+<script src="/js/projects.tag" type="riot/tag"></script>
+<script type="text/javascript">
+    $(function() {
+        riot.mount('projects');
+    });
+</script>
 </body>
 </html>
