--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <link rel=icon href=/images/favicon.ico>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
@@ -19,8 +20,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-blue.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
-
+    
 
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
