icon and doiiit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             {% endif %}
 
             <hr />
-            <div class="footer"> Updated {{ site.time | date_to_string }} | <a href="//si.umich.edu">School of Information</a> | <a href="//www.umich.edu">University of Michigan</a></div>
+            <div class="footer"> Updated {{ site.time | date_to_string }} | <a href="//doiiit.github.io">DoIIIT LAB</a> | <a href="//si.umich.edu">School of Information</a> | <a href="//www.umich.edu">University of Michigan</a></div>
         </div>
         {% if page.url != '/' %}
     </div>
