--- a/css/mine.css
+++ b/css/mine.css
@@ -273,8 +273,8 @@ ul.projects li {
 
 ul.projects li img {
   float: left; 
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+    -webkit-filter: sepia(60%); /* Safari 6.0 - 9.0 */
+    filter: sepia(60%);
 }
   
 
