--- a/css/mine.css
+++ b/css/mine.css
@@ -218,7 +218,7 @@ legend {
 }
 
 html, body {
-  font: 17.5px/1.5 "source-sans-pro", sans-serif;
+  font: 17.5px/1.5 Cera, "source-sans-pro", sans-serif;
   text-rendering: optimizeLegibility;
   color: #585857; }
 
@@ -298,7 +298,7 @@ em {
   font-style: italic; }
 
 h1, h2, h3, h4, .header, .footer, .publication, .sans {
-  font-family: "source-sans-pro", sans-serif; }
+  font-family: Cera, "source-sans-pro", sans-serif; }
 
 h1, h2, h3, h4 {
   color: #3f3f3e; }
@@ -486,3 +486,8 @@ aside {
     position: relative;
     width: auto; } 
   }
+
+
+#iamTypes button{
+  font-family: Cera, Verdana, "Merriweather", sans-serif;
+}
