Added information about GUI

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,12 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="https://cdn.jsdelivr.net/riot/3.3.2/riot+compiler.min.js"></script>
-<script src="/js/projects.tag" type="riot/tag"></script>
+<script src="/js/more.tag" type="riot/tag"></script>
+
 
 <script type="text/javascript">
     $(function() {
-        riot.mount('projects');
+        riot.mount('more');
     });
 </script>
     <script>
