--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,15 +10,9 @@
 
     <title>{{ site.name }} | {{ page.title }}</title>
 
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!-- <link href="../old_site/media/css/styles.css" rel="stylesheet" type="text/css" /> -->
-    <script src="../old_site/media/js/cdb-studio.js" type="text/javascript"></script>
-    <script src="../old_site/media/js/project-load.js" type="text/javascript"></script>
-    <script src="../old_site/media/js/google-an.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+        crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
