--- a/css/mine.css
+++ b/css/mine.css
@@ -193,8 +193,8 @@ legend {
 
 .bigText {
   font-size: 120%;
-  font-family: Cera, Verdana, "Merriweather", sans-serif;
-  color: #585857; 
+  /* font-family: Cera, Verdana, "Merriweather", sans-serif; */
+  /* color: #585857;  */
 }
 .text-muted {
     color: #777;
